# opencosmos-harvester

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: actions.yaml
opencosmos_harvester/: __main__.py  accenture-1-l1c-cogs.json  config.json  hammer-l1c-cogs.json  mantis-l1d-cogs.json  menut-l1a-cogs.json  menut-l1b-cogs.json  menut-l1c-cogs.json  metadata.py  open_cosmos.py  opencosmos_harvester_messager.py  platero-l1c-cogs.json  summary.py  utils.py
